--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@ h1 {
 	width:30px;
 	height:30px;
 	border-radius:50%;
-	border:solid 2px #aaa;
+	border:solid 2px #ef5bb9;
 	transition:all ease 0.3s;
      
 }
@@ -64,7 +64,7 @@ h1 {
 #progress-bar-container li.active:before, #progress-bar-container li:hover:before {
 	border:solid 2px #fff;
        	 
-	background: linear-gradient(to right, #E91E63 0%,#fff 100%); 
+	background: linear-gradient(to right, #35e8a4 0%,#55c5e1 100%); 
 }
 
 #progress-bar-container li {
@@ -72,7 +72,7 @@ h1 {
 	float:left;
 	width:14%;
 	text-align:center;
-	color:#aaa;
+	color:#dc52e8;
 	text-transform:uppercase;
 	font-size:11px;
 	cursor:pointer;
